# pdf-2-long-image-agy

./: .dockerignore  Dockerfile  LICENSE.md  README.md  app-cli.py  app.py  pyproject.toml  requirements.txt  test_app.py
static/css/: style.css
static/js/: main.js
templates/: index.html
